--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalles_alimento.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalles_alimento.html
@@ -105,26 +105,26 @@
     <div class="form-group">
         <label for="tipoColacion">Comida:</label>
         <select id="tipoColacion" name="tipoColacion">
-            <option value="DESAYUNO">Desayuno</option>
-            <option value="SNACKS">Snacks</option>
-            <option value="ALMUERZO">Almuerzo</option>
-            <option value="MERIENDA">Merienda</option>
-            <option value="CENA">Cena</option>
+            <option value="0">Desayuno</option>
+            <option value="1">Snacks</option>
+            <option value="2">Almuerzo</option>
+            <option value="3">Merienda</option>
+            <option value="4">Cena</option>
         </select>
     </div>
 
     <div class="form-group">
         <label for="fecha">Fecha:</label>
         <select id="fecha" name="fecha">
-            <option value="ayer">Ayer</option>
-            <option value="hoy" selected>Hoy</option>
-            <option value="mañana">Mañana</option>
+            <option value="1">Ayer</option>
+            <option value="2" selected>Hoy</option>
+            <option value="3">Mañana</option>
         </select>
     </div>
 
     <div class="form-group">
         <label for="cantidad">Cantidad:</label>
-        <input type="number" id="cantidad" name="cantidad" min="1" required />
+        <input type="number" id="cantidad" name="cantidad" min="1"  />
     </div>
 
     <button type="submit" name="action" value="guardar">Guardar</button>
