test repositorios Alimento y CategoriaAlimento y fix footer home

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -41,9 +41,11 @@
                 </a>
             </div>
         </div>
+    </div>
 
         <div class="container mt-5">
             <div class="row">
+
                 <!-- Columna para el cuadro de ingreso de peso -->
                 <div class="col-md-6 d-flex align-items-center justify-content-center">
                     <div class="card bg-light mb-3 weight-form-card">
@@ -63,6 +65,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- Columna para la tarjeta de estadísticas de peso -->
                 <div class="col-md-6 d-flex align-items-center justify-content-center">
                     <div class="card bg-light mb-3 weight-stats-card">
@@ -75,6 +78,7 @@
                         </a>
                     </div>
                 </div>
+
             </div>
         </div>
         <footer th:replace="footer ::footer"></footer>
