--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <script>
+        function visibilidad(formid) {
+            var form = document.getElementById(formid);
+            var button = document.getElementById("button");
+            if (form.style.display === "none") {
+                form.style.display = "block";
+                button.textContent = "-";
+            } else {
+                form.style.display = "none";
+                button.textContent = "+";
+            }
+        }
+    </script>
 
 </head>
 <body>
@@ -40,7 +52,15 @@
                 <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento</li>
             </ul>
         </div>
-        <button type="button" class="btn btn-success" th:onclick="'window.location.href=\'' + @{/categoria_alimentos} + '\''">Agregar alimento+</button>
+        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form1')|">+</button>
+            <form style="display:none;" id="form1" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
+                <input type="hidden"  id="tipoColacion" value="0" name="tipoColacion" />
+                <input type="hidden"  id="fecha" value="2" name="fecha" />
+                <select multiple="" name="alimentoIds">
+                    <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
+                </select>
+                <button class="btn btn-success" type="submit">Agregar Alimentos</button>
+            </form>
     </div>
 
 
@@ -51,8 +71,15 @@
                 <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento</li>
             </ul>
         </div>
-        <button type="button" class="btn btn-success" th:onclick="'window.location.href=\'' + @{/categoria_alimentos} + '\''">Agregar alimento+</button>
-
+        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form2')|">+</button>
+        <form style="display:none;" id="form2" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
+            <input type="hidden"  id="tipoColacion" value="2" name="tipoColacion" />
+            <input type="hidden"  id="fecha" value="2" name="fecha" />
+            <select multiple="" name="alimentoIds">
+                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
+            </select>
+            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
+        </form>
     </div>
 
 
@@ -63,7 +90,15 @@
                 <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento</li>
             </ul>
         </div>
-        <button type="button" class="btn btn-success" th:onclick="'window.location.href=\'' + @{/categoria_alimentos} + '\''">Agregar alimento+</button>
+        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form3')|">+</button>
+        <form style="display:none;" id="form3" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
+            <input type="hidden"  id="tipoColacion" value="3" name="tipoColacion" />
+            <input type="hidden"  id="fecha" value="2" name="fecha" />
+            <select multiple="" name="alimentoIds">
+                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
+            </select>
+            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
+        </form>
    </div>
 
 
@@ -74,7 +109,15 @@
                 <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento</li>
             </ul>
         </div>
-        <button type="button" class="btn btn-success" th:onclick="'window.location.href=\'' + @{/categoria_alimentos} + '\''">Agregar alimento+</button>
+        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form4')|">+</button>
+        <form style="display:none;" id="form4" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
+            <input type="hidden"  id="tipoColacion" value="4" name="tipoColacion" />
+            <input type="hidden"  id="fecha" value="2" name="fecha" />
+            <select multiple="" name="alimentoIds">
+                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
+            </select>
+            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
+        </form>
     </div>
 
 
@@ -85,8 +128,15 @@
                 <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento</li>
             </ul>
         </div>
-        <button type="button" class="btn btn-success" th:onclick="'window.location.href=\'' + @{/categoria_alimentos} + '\''">Agregar alimento+</button>
-
+        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form5')|">+</button>
+        <form style="display:none;" id="form5" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
+            <input type="hidden"  id="tipoColacion" value="1" name="tipoColacion" />
+            <input type="hidden"  id="fecha" value="2" name="fecha" />
+            <select multiple="" name="alimentoIds">
+                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
+            </select>
+            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
+        </form>
         </div>
             </div>
     <div class="col-md-8">
