buscador categoria y alimentos, y sus test

--- a/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
@@ -15,35 +15,66 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-<div th:replace="navbar :: navbar"></div>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-12">
-            <div class="list-group flex-row justify-content-center">
-                <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
-                <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action activo">ALIMENTOS</a>
-                <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
-                <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+    <!--header/navbar-->
+    <div th:replace="navbar :: navbar"></div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <div class="list-group flex-row justify-content-center">
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action">MI FATLOSS</a>
+                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action activo">ALIMENTOS</a>
+                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="row justify-content-center" style="min-height: 80vh;">
-        <div class="col-md-6">
-            <h1 class="text-center mt-4" th:text="${categoria.nombre}"></h1>
-            <ul class="list-group d-flex flex-column align-items-center">
-                <li th:each="alimento : ${categoria.alimentos}" class="list-group-item text-center">
-                    <img th:src="@{'/img/alimentos/' + ${alimento.imagen}}" alt="alimento-imagen" style="width: 100px; height: 100px;"/>
-                    <a th:href="@{/alimentos/{id}(id=${alimento.id})}" th:text="${alimento.nombre}" style="font-size: 1.5em;"></a>
-                </li>
-            </ul>
+    <!--alimentos-->
+    <div class="container d-flex flex-row mt-4">
+        <h2 class="text-center" th:text="${categoria.nombre}"></h2> 
+        <form class="d-flex ms-auto" role="search" th:action="@{/buscarAlimento/{idCategoria}(idCategoria=${categoria.id})}" method="get">
+            <input class="form-control me-2" type="search" name="search" id="search" placeholder="Ingresar Alimento" aria-label="Ingresar Alimento">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
+    </div>   
+    <div class="container my-4" style="min-height: 60vh;">
+        <div class="d-flex flex-column justify-content-center my-1 mx-5">
+            <div class="alert alert-warning alert-dismissible fade show" th:if="${unknown != null}">
+                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                <strong>Unknown: </strong><span th:text="${unknown}"></span>
+            </div>
         </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div th:if="${alimentos !=null}" th:each="alimento: ${alimentos}" class="col justify-content-center">
+                <div class="card text-center">
+                    <img th:src="@{'/img/alimentos/' + ${alimento.imagen}}" class="card-img-top mx-auto d-block" alt="alimento_imagen" style="max-width:150px;min-height:150px;">
+                    <div class="card-body">
+                        <a th:href="@{/alimentos/{id}(id=${alimento.id})}">
+                            <h5 th:text="${alimento.nombre}" class="card-title"></h5>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div th:if="${alimentos == null}" th:each="alimento : ${categoria.alimentos}" class="col justify-content-center">
+                <div class="card text-center">
+                    <img th:src="@{'/img/alimentos/' + ${alimento.imagen}}" class="card-img-top mx-auto d-block" alt="alimento_imagen" style="max-width:150px;min-height:150px;">
+                    <div class="card-body">
+                        <a th:href="@{/alimentos/{id}(id=${alimento.id})}">
+                            <h5 th:text="${alimento.nombre}" class="card-title"></h5>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>        
     </div>
-</div>
 
-<div th:replace="footer :: footer"></div>
+    <!--footer-->
+    <div th:replace="footer :: footer"></div>
+
 </body>
 </html>
